--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 
-
 .topnav {
     overflow: hidden;
     color: #777777; 
@@ -10,7 +9,7 @@
     border-right-style:none;
     border-color: #cccccc;
     margin-top : 0px!important;
-    margin-bottom: 30px!important;
+    margin-bottom: 20px!important;
     width: 100%;
     
     
@@ -23,7 +22,10 @@
         color:#ffffff;
         width: 20%;
         height: 50px; 
-        padding:25px;
+        padding:10px;
+        border: solid; 
+        border-color: #777777;
+        border-width: 2px; 
         font-size: 25px;
         text-align:center;
         margin: auto;   
@@ -45,14 +47,14 @@
     }
 
   body {
-    
-        width: 960px;
-        padding: 100px;
-        margin: 11px auto;    
-        background-color: #cccccc;
-        border: #dddddd;
-
-            
+    background-image: url ("basic-portfolio/assets/images/united-squares-negative.png");
+    background-position: right top;
+    background color: #cccccc; 
+    width: 960px;
+    padding: 100px;
+    margin: 9px auto;    
+    border: #dddddd;   
+       
   }
 
   img {
@@ -78,6 +80,20 @@
     word-spacing: 8px;
    
   }
+  
+  .contact {
+    background-color: #ffffff;
+    border:solid;
+    border-bottom: none;
+    border-color:#cccccc; 
+    padding: 10px;
+    margin: 0;
+    text-align: left;  
+    font-family:'Georgia', Times, Times New Roman, serif;
+    color: #777777;
+    word-spacing: 8px;
+
+  }
 
   .line {
     border: 1px solid #cccccc;
@@ -87,6 +103,65 @@
     margin-bottom: 5%;
     display: block;
 }
+
+input[type=text] {
+  width: 100%;
+  padding: 5px 10px;
+  margin: 3px;
+  box-sizing: border-box;
+  color:#666666;  
+  box-shadow: none;
+
+}
+
+.form {
+  color:#777777;
+  border: solid; 
+  border-color: #cccccc;
+  border-top: none; 
+  font-family:Arial, Helvetica, sans-serif;
+  box-shadow: none; 
+  padding: 0em; 
+  
+ 
+}
+
+textarea {
+  padding: 20px; 
+}
+
+
+button {
+  background-color: #4aaaa5;
+  color: #ffffff;
+  width: 200px;
+  height:60px;
+  font-family: Arial, Helvetica, sans-serif
+}
+
+.container {
+  padding: 20px; 
+  position: relative;
+  text-align: center; 
+  color: white; 
+  font-stretch: expanded; 
+}
+.centered {
+  position: absolute;
+  top: 74%; 
+  left: 36%; 
+  transform: translate(-100%, 600%);
+  background-color:#4aaaa5;
+  font-size: 35px;
+  text-align: center;
+  color: white;
+  padding-right: 30px; 
+  padding-left: 30px; 
+  margin: 15px; 
+  background-size: auto; 
+  width: 30%
+}
+
 
 #footer {
     padding:5px;
